--- a/app/baza-otdiha/index.html
+++ b/app/baza-otdiha/index.html
@@ -116,7 +116,7 @@
 							<img class='icon' src='../img/svg/photo.svg' alt='photo'>
 						</a>
 						<a href="#when-you-can-remove" class="elem">
-							<span class="select">Когда можно снять</span>
+							<span class="select">Период бронирования</span>
 							<img class='icon' src='../img/svg/calendar.svg' alt='calendar'>
 						</a>
 						<a href="#kit" class="elem">
@@ -189,7 +189,7 @@
 	<section id='when-you-can-remove' class="section section__hut section__hut-2">
 		<div class="container">
 			<div class="content">
-				<h2 class="h2 select">Когда можно снять</h2>
+				<h2 class="h2 select">Период бронирования</h2>
 				<p class="p">Забронировать домик, вы можете после лагерного периода, <span class="select">с 3.09.2016 по 19.06.2017</span>.</p>
 			</div>
 		</div>
