--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -116,7 +116,7 @@
 							<img class='icon' src='../img/svg/photo.svg' alt='photo'>
 						</a>
 						<a href="/baza-otdiha/#when-you-can-remove" class="elem">
-							<span class="select">Когда можно снять</span>
+							<span class="select">Период бронирования</span>
 							<img class='icon' src='../img/svg/calendar.svg' alt='calendar'>
 						</a>
 						<a href="/baza-otdiha/#kit" class="elem">
